--- a/master/Src/Screen1.fx.yaml
+++ b/master/Src/Screen1.fx.yaml
@@ -19,6 +19,11 @@ Screen1 As screen:
             ZIndex: =2
 
             Button1 As button:
-                Text: ="Ciao"
+                Text: ="3r23r213r"
                 ZIndex: =1
+
+            Form2 As form:
+                LayoutMinHeight: =250
+                LayoutMinWidth: =400
+                ZIndex: =2
 
