--- a/master/Src/Components/new_workflow_popup.fx.yaml
+++ b/master/Src/Components/new_workflow_popup.fx.yaml
@@ -76,7 +76,7 @@ new_workflow_popup As CanvasComponent:
         FocusedBorderColor: =Self.Fill
         FocusedBorderThickness: =2
         Font: =style.fonts.family.primary
-        Height: =278
+        Height: =384
         HoverBorderColor: =Self.Fill
         HoverColor: =Self.Color
         HoverFill: =ColorFade(Self.Fill, -20%)
@@ -138,7 +138,7 @@ new_workflow_popup As CanvasComponent:
         Height: =59
         Width: =407
         X: =479
-        Y: =446
+        Y: =552
         ZIndex: =9
 
         TextInput4_2 As text:
@@ -211,7 +211,7 @@ new_workflow_popup As CanvasComponent:
             RadiusTopLeft: =20
             RadiusTopRight: =20
             Size: =style.fonts.size.s
-            Text: ="Cancel65456"
+            Text: ="Cancel"
             Width: =181
             X: =20
             Y: =14
